console,oauth: Fix checkbox wrapping

--- a/pkg/webui/components/checkbox/group/group.styl
+++ b/pkg/webui/components/checkbox/group/group.styl
@@ -15,6 +15,7 @@
 .group
   display: flex
   flex-direction: row
+  flex-wrap: wrap
 
   .group-checkbox:not(:last-child)
     margin-right: $cs.m
